language/move-lang/tests/move_check/parser/invalid_pack_mname_non_addr.exp
error: 

   ┌── tests/move_check/parser/invalid_pack_mname_non_addr.move:4:14 ───
   │
 4 │         false::M::S { }
   │              ^^ Unexpected token: '::'
   ·
 4 │         false::M::S { }
   │              -- Expected: ';'
   │

