language/move-lang/tests/move_check/parser/invalid_pack_mname_non_addr.move
module M {
    struct S {}
    foo() {
        false::M::S { }
    }

    bar() {
        bar()::bar()::M::S { }
    }
}
